# internal/routers/commonRouter.go
@@ -24,6 +24,7 @@ func CommonRouter() *mux.Router {
 	)).Methods(http.MethodGet)
 
 	// User routes
+	router.HandleFunc("/api/users/register", controllers.CreateUser).Methods("POST")
 	router.HandleFunc("/api/users", controllers.CreateUser).Methods("POST")
 	router.HandleFunc("/api/users/{id}", controllers.GetUserByID).Methods("GET")
 	router.HandleFunc("/api/users", controllers.GetAllUsers).Methods("GET")
